--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@payos/node": "^2.0.3",
     "axios": "^1.13.2",
     "backend": "file:",
     "bcrypt": "^5.1.1",
@@ -23,11 +22,11 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
+    "neo4j-driver": "^6.0.1",
     "nodemon": "^3.1.7",
     "qs": "^6.14.0",
-    "stripe": "^17.2.1",
+    "uuid": "^13.0.0",
     "validator": "^13.12.0"
   }
 }
