--- a/admin/package.json
+++ b/admin/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "admin": "file:",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "recharts": "^3.5.1",
+    "serve": "^14.2.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
